--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/03/22 18:52:45 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/03/22 21:52:40 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -60,13 +60,6 @@
     "outputId": "7857ef9f-5b04-405d-f5aa-e535dfe7870c"
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/03/22 18:58:59 WARN SparkContext: The path https://2u-data-curriculum-team.s3.amazonaws.com/dataviz-classroom/v1.2/22-big-data/home_sales_revised.csv has been added already. Overwriting of added paths is not supported in the current version.\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -121,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "id": "RoljcJ7WPpnm"
    },
@@ -162,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -200,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -238,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -278,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -317,7 +310,7 @@
       "+----+-------------+\n",
       "only showing top 20 rows\n",
       "\n",
-      "--- 0.321911096572876 seconds ---\n"
+      "--- 0.3099839687347412 seconds ---\n"
      ]
     }
    ],
@@ -340,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -355,7 +348,7 @@
        "DataFrame[]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -382,7 +375,7 @@
        "True"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -433,7 +426,7 @@
       "+----+-------------+\n",
       "only showing top 20 rows\n",
       "\n",
-      "--- 0.5207467079162598 seconds ---\n"
+      "--- 0.22278714179992676 seconds ---\n"
      ]
     }
    ],
@@ -457,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {
     "id": "Qm12WN9isHBR"
    },
@@ -479,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {
     "id": "AZ7BgY61sRqY"
    },
@@ -493,19 +486,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {
     "id": "J6MJkHfvVcvh"
    },
    "outputs": [],
    "source": [
     "# 12. Create a temporary table for the parquet data.\n",
-    "p_df_p.createOrReplaceTempView('Home_salesp')"
+    "p_df_p.createOrReplaceTempView('home_sales')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -544,7 +537,7 @@
       "+----+-------------+\n",
       "only showing top 20 rows\n",
       "\n",
-      "--- 0.6835598945617676 seconds ---\n"
+      "--- 0.3359551429748535 seconds ---\n"
      ]
     }
    ],
@@ -555,7 +548,7 @@
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "sql = \"\"\"(SELECT view, round(avg(price),2) as average_price from home_salesp\n",
+    "sql = \"\"\"(SELECT view, round(avg(price),2) as average_price from home_sales\n",
     "WHERE price >=350000\n",
     "GROUP BY view \n",
     "ORDER BY view desc\n",
@@ -570,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -585,19 +578,19 @@
        "DataFrame[]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 14. Uncache the home_sales temporary table.\n",
-    "spark.sql(\"uncache table home_salesp\")"
+    "spark.sql(\"uncache table home_sales\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -612,14 +605,14 @@
        "False"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 15. Check if the home_sales is no longer cached\n",
-    "spark.catalog.isCached(\"home_salesp\")\n"
+    "spark.catalog.isCached(\"home_sales\")\n"
    ]
   }
  ],
